set(CMAKE_CXX_STANDARD 17)
add_subdirectory(swapcontext)
file(GLOB YURCO_SOURCES "*.cpp" "*.hpp")
list(REMOVE_ITEM YURCO_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/shared.cpp")
add_library(yurco STATIC EXCLUDE_FROM_ALL ${YURCO_SOURCES})
target_link_libraries(yurco swapcontext unistd)
add_library(yurco_shared SHARED EXCLUDE_FROM_ALL "shared.cpp")
set_target_properties(yurco_shared PROPERTIES OUTPUT_NAME yurco)
target_link_libraries(yurco_shared yurco dl)
