project(yurco-dev)
cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release" AND NOT YURCO_TRANSPARENCY)
    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-inline")
option(USE_SINGLE_THREAD "Disable multithread locking")
if (USE_SINGLE_THREAD)
    add_definitions(-DSINGLE_THREAD)
endif()
if (YURCO_TRANSPARENCY)
    add_definitions(-DYURCO_TRANSPARENCY)
    set(CMAKE_EXE_LINKER_FLAGS "-Wl,-wrap=read,-wrap=write,-wrap=close,-wrap=connect,-wrap=accept4,-wrap=recv,-wrap=recvfrom,-wrap=recvmsg,-wrap=send,-wrap=sendto,-wrap=sendmsg ${CMAKE_EXE_LINKER_FLAGS}")
endif()

include_directories(.)
add_subdirectory(unistd)
add_subdirectory(yurco)

add_executable(yurco-mysql "mysql.cpp")
target_link_libraries(yurco-dev unistd yurco pthread mysqlclient${CMAKE_STATIC_LIBRARY_SUFFIX} ssl${CMAKE_STATIC_LIBRARY_SUFFIX} crypto${CMAKE_STATIC_LIBRARY_SUFFIX} dl z)
